--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
         </div>
         <div class="row">
         <div class="column">
-            <p style="color: white;">Noah is a human</p>
+            <p style="color: white;">
+              Noah is a human. He loves his cats. His cats are the best thing that ever happened to him.
+              He would do anything for his cats. Noah often speaks in the third person about himself.
+            </p>
         </div>
         <div class="column">
             <p style="color:white;">Noah hates pictures</p>
