--- a/ada.html
+++ b/ada.html
@@ -68,7 +68,7 @@
           </p>
       </div>
       <div class="column">
-          <img src="IMG_6083.jpeg" alt="Ada">
+          <img src="IMG_6083.jpeg" alt="Ada" width="500" height="500">
       </div>
       </div>
         </div>
