--- a/kepler.html
+++ b/kepler.html
@@ -68,7 +68,7 @@
           </p>
       </div>
       <div class="column">
-          <img src="IMG_0008.jpeg" alt="Kepler">
+          <img src="IMG_0008.jpeg" alt="Kepler" width="500" height="500">
       </div>
       </div>
         </div>
