--- a/nicky.html
+++ b/nicky.html
@@ -68,7 +68,7 @@
           </p>
       </div>
       <div class="column">
-          <img src="IMG_0181.jpeg" alt="Nicky">
+          <img src="IMG_0181.jpeg" alt="Nicky" width="500" height="500">
       </div>
       </div>
         </div>
